changed from table to buttons

--- a/index.html
+++ b/index.html
@@ -9,43 +9,28 @@
     <title>Calculator</title>
 </head>
 <body>
-    <h1>Calculator</h1>
-
-
-    <div id="container" class="container">
-    <table>
-        <tr>
-            <td colspan="4" class="calc">0</td>
-        </tr>
-        <tr>
-            <td class="calc">AC</td>
-            <td class="calc">+/-</td>
-            <td class="calc">%</td>
-            <td class="calc">/</td>
-        </tr>
-        <tr>
-            <td class="calc">7</td>
-            <td class="calc">8</td>
-            <td class="calc">9</td>
-            <td class="calc">*</td>
-        </tr>
-        <tr>
-            <td class="calc">4</td>
-            <td class="calc">5</td>
-            <td class="calc">6</td>
-            <td class="calc">-</td>
-        </tr>
-        <tr>
-            <td class="calc">1</td>
-            <td class="calc">2</td>
-            <td class="calc">3</td>
-            <td class="calc">+</td>
-        </tr>
-            <td colspan="2" class="calc">0</td>
-            <td class="calc">.</td>
-            <td class="calc">=</td>
-            
-    </table>
-    </div>
+<div class="container">
+    <div class="display">this is the display</div>
+    <button class="calc">AC</button>
+    <button class="calc">+/-</button>
+    <button class="calc">%</button>
+    <button class="calc">/</button>
+    <button class="calc">7</button>
+    <button class="calc">8</button>
+    <button class="calc">9</button>
+    <button class="calc">*</button>
+    <button class="calc">4</button>
+    <button class="calc">5</button>
+    <button class="calc">6</button>
+    <button class="calc">-</button>
+    <button class="calc">1</button>
+    <button class="calc">2</button>
+    <button class="calc">3</button>
+    <button class="calc">+</button>
+    <button class="double">0</button>
+    <button class="calc">.</button>
+    <button class="calc">=</button>
+</div>
+    
 </body>
 </html>
