basic calculator functionality is working code is still messy

--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 </head>
 <body>
 <div class="container">
-    <div class="display">this is the display</div>
-    <button class="calc">AC</button>
-    <button class="calc">+/-</button>
-    <button class="calc">%</button>
-    <button class="calc">/</button>
-    <button class="calc">7</button>
-    <button class="calc">8</button>
-    <button class="calc">9</button>
-    <button class="calc">*</button>
-    <button class="calc">4</button>
-    <button class="calc">5</button>
-    <button class="calc">6</button>
-    <button class="calc">-</button>
-    <button class="calc">1</button>
-    <button class="calc">2</button>
-    <button class="calc">3</button>
-    <button class="calc">+</button>
-    <button class="double">0</button>
+    <div id="display" class="display"></div>
+    <div id="result" class="result"></div>
+    <button class="double" id="clear">Clear</button>
+    <button class="operator" value="">Del</button>
+    <button class="operator" value="/">/</button>
+    <button class="calc" value="7">7</button>
+    <button class="calc" value="8">8</button>
+    <button class="calc" id="nine" value="9">9</button>
+    <button id="mult" class="operator" value="*">*</button>
+    <button id="four" class="calc" value="4">4</button>
+    <button id="five" class="calc" value="5">5</button>
+    <button id="six" class="calc" value="6">6</button>
+    <button class="operator" value="-">-</button>
+    <button id = "one" class="calc" value="1">1</button>
+    <button id = "two" class="calc" value="2">2</button>
+    <button id = "three" class="calc" value="3">3</button>
+    <button id ="plus" class="operator" value="+">+</button>
+    <button class="double" value="0">0</button>
     <button class="calc">.</button>
-    <button class="calc">=</button>
+    <button id="equals">=</button>
 </div>
     
 </body>
