--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="display" class="display"></div>
     <div id="result" class="result"></div>
     <button class="double" id="clear">Clear</button>
-    <button class="operator" value="">Del</button>
+    <button class="delete" value="">Del</button>
     <button class="operator" value="/">/</button>
     <button class="calc" value="7">7</button>
     <button class="calc" value="8">8</button>
@@ -28,7 +28,7 @@
     <button id = "three" class="calc" value="3">3</button>
     <button id ="plus" class="operator" value="+">+</button>
     <button class="double" value="0">0</button>
-    <button class="calc">.</button>
+    <button class="calc" c;ass>.</button>
     <button id="equals">=</button>
 </div>
     
