--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/ico"  href="img/favicon.ico">
     <script src="script.js" defer></script>
     <title>Calculator</title>
 </head>
@@ -31,6 +32,12 @@
     <button class="calc" c;ass>.</button>
     <button id="equals">=</button>
 </div>
-    
+<footer>
+    <p class="footer">Designed by: John Corrigan</p>
+    <a href="https://github.com/JohnCorrigan1">
+    <img class="github-logo" src="img/GitHub-Mark-Light-32px.png">
+</a>
+</footer>    
+
 </body>
 </html>
